--- a/portifolio/style_v2.css
+++ b/portifolio/style_v2.css
@@ -3,10 +3,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root{ /*variaveis css */
-    --cor-principal: #153448;
+    --cor-principal: #1a1716;
     --cor-secundaria: #DFD0B8;
-    --cor-terciaria: #948979;
-    --cor-hover: #3C5B6F;
+    --cor-terciaria: #AF8260;
+    --cor-hover: #683533;
 
     --fonte-principal: "Krona One", sans-serif;
     --fonte-secundaria: "Montserrat", sans-serif;;
@@ -49,7 +49,7 @@ body{
 
 
 .apresentacao{
-    padding: 5% 15%;
+    padding: 5% 20%;
     display: flex;
     align-items: center;
     justify-content: space-between;
